--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,14 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.3.12.v20160915</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
